Changelog
=========

1.3 (unreleased)
----------------

- Nothing changed yet.


1.2 (2012-04-03)
----------------

- Fixed readme and history


1.0 (2012-01-12)
----------------

- added linkedin
- overridden viewlet 
