@@ -1,0 +1,36 @@
+<tal:metas i18n:domain="sc.social.like" tal:condition="view/enabled">
+
+
+    <tal:linkedin
+        tal:condition="view/linkedin_enabled">
+        <script type="text/javascript" src="http://platform.linkedin.com/in.js"></script>
+    </tal:linkedin>
+
+
+    <tal:pinterest
+        tal:condition="view/pinterest_enabled">
+            <script type='text/javascript'>
+            (function() {
+                window.PinIt = window.PinIt || { loaded:false };
+                if (window.PinIt.loaded) return;
+                window.PinIt.loaded = true;
+                function async_load(){
+                    var s = document.createElement('script');
+                    s.type = 'text/javascript';
+                    s.async = true;
+                    if (window.location.protocol == 'https:')
+                        s.src = 'https://assets.pinterest.com/js/pinit.js';
+                    else
+                        s.src = 'http://assets.pinterest.com/js/pinit.js';
+                    var x = document.getElementsByTagName('script')[0];
+                    x.parentNode.insertBefore(s, x);
+                }
+                if (window.attachEvent)
+                    window.attachEvent('onload', async_load);
+                else
+                    window.addEventListener('load', async_load, false);
+            })();
+            </script>
+    </tal:pinterest>
+
+</tal:metas>
