@@ -4,7 +4,9 @@ Changelog
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- added a viewlet with the js [sithmel]
+- added a portlet class (vertical or horizontal) [sithmel]
+- fix vertical/horizontal on pinterest and linkedin [sithmel]
 
 
 1.2 (2012-04-03)
